début des travaux

--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-start
+<!doctype html>
+
+<html lang="fr">
+	<head>
+	 	<meta charset="utf-8">
+	  	<title>Portfolio T.Campredon</title>
+	  	<link rel="stylesheet" href="reset.css">
+	  	<link rel="stylesheet" href="style.css">
+	  	<script src="script.js"></script>
+	</head>
+	<body>
+		<nav>
+
+		</nav>
+		<div id="containeurPrincipale">
+			<div id="structure">
+				<div id="gauche">
+
+				</div>
+				<div id="accueil">
+					<div id="carte">
+						<div id="who">
+							<img id="photo" src="./image/logo.png">
+							<h1>Thomas Campredon</h1>
+							<h2>Etudiant en informatique</h2>
+						</div>
+					</div>
+				</div>
+				<div id="droite">
+
+				</div>
+			</div>
+		</div>
+	</body>
+	<footer>
+
+	</footer>
+</html>
