--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <html lang="fr">
 	<head>
 	 	<meta charset="utf-8">
 	  	<title>Portfolio T.Campredon</title>
 	  	<link rel="stylesheet" href="reset.css">
 	  	<link rel="stylesheet" href="style.css">
-	  	<script src="script.js"></script>
+	  	
 	</head>
 	<body>
 		<nav>
@@ -23,6 +23,7 @@
 							<img id="photo" src="./image/logo.png">
 							<h1>Thomas Campredon</h1>
 							<h2>Etudiant en informatique</h2>
+							<p class="justifie">Je suis un étudiant en 2ème année de diplome universitaire de technologie en informatique. </p>
 						</div>
 					</div>
 				</div>
@@ -35,4 +36,5 @@
 	<footer>
 
 	</footer>
+	<script src="script.js"></script>
 </html>
