WIP icon pour les liens

--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
 							<img id="photo" src="./image/logo.png">
 							<h1>Thomas Campredon</h1>
 							<h2>Etudiant en informatique</h2>
-							<p class="justifie">Je suis un étudiant en 2ème année de diplome universitaire de technologie en informatique. </p>
+
+							<div id="lienReseau">
+								<ul class="enLigne">
+									<li><a href="https://github.com/ThomasCampredon" target="_blank"><img src="./icon/github.png"></a></li>
+									<li><a href="mailto:thomas.campredon@etu.unilim.fr" target="_blank"><img src="./icon/mail.png"></a></li>
+									<li><a href="#" target="_blank"><img src="./icon/linkedin.png"></a></li>
+								</ul>
+							</div>
+
+							<p class="justifie">
+								Je suis un étudiant en 2ème année de diplome universitaire de technologie en informatique (DUT info) à Limoges. J'ai des connaissance en python, java, SQL, C, C++, HTML/CSS, javascript et PHP. Je souhaite devenir ingénieur en sécurité informatique.
+							</p>
 						</div>
 					</div>
 				</div>
@@ -32,9 +43,10 @@
 				</div>
 			</div>
 		</div>
-	</body>
-	<footer>
+		<footer>
 
-	</footer>
+		</footer>
+	</body>
+	
 	<script src="script.js"></script>
 </html>
