--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
 							<div id="lienReseau">
 								<ul class="enLigne">
-									<li><a href="https://github.com/ThomasCampredon" target="_blank"><img src="./icon/github.png"></a></li>
-									<li><a href="mailto:thomas.campredon@etu.unilim.fr" target="_blank"><img src="./icon/mail.png"></a></li>
-									<li><a href="#" target="_blank"><img src="./icon/linkedin.png"></a></li>
+									<li><a href="https://github.com/ThomasCampredon" target="_blank"><img class="icon" src="./icon/github2.png"></a></li>
+									<li><a href="mailto:thomas.campredon@etu.unilim.fr" target="_blank"><img class="icon" src="./icon/mail2.png"></a></li>
+									<li><a href="#" target="_blank"><img class="icon" src="./icon/linkedin2.png"></a></li>
 								</ul>
 							</div>
 
