ébauche de boutons flottants

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="fr">
 	<head>
 	 	<meta charset="utf-8">
-	  	<title>Portfolio T.Campredon</title>
+	  	<title>T.Campredon</title>
 	  	<link rel="stylesheet" href="reset.css">
 	  	<link rel="stylesheet" href="style.css">
 	  	
@@ -36,6 +36,18 @@
 								Je suis un étudiant en 2ème année de diplome universitaire de technologie en informatique (DUT info) à Limoges. J'ai des connaissance en python, java, SQL, C, C++, HTML/CSS, javascript et PHP. Je souhaite devenir ingénieur en sécurité informatique.
 							</p>
 						</div>
+					</div>
+					<div class="boutonInfo">
+						<a href="#">
+							<span></span>
+							<span></span>
+							Formation
+						</a>
+						<a href="#">
+							<span></span>
+							<span></span>
+							Autres informations
+						</a>
 					</div>
 				</div>
 				<div id="droite">
