--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 						<a href="#">
 							<span></span>
 							<span></span>
-							Formation
+							Formations
 						</a>
 						<a href="#">
 							<span></span>
 							<span></span>
-							Autres informations
+							Compétences
 						</a>
 					</div>
 				</div>
