remise en place des répertoires

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<head>
 	 	<meta charset="utf-8">
 	  	<title>T.Campredon</title>
-	  	<link rel="stylesheet" href="reset.css">
-	  	<link rel="stylesheet" href="style.css">
+	  	<link rel="stylesheet" href="CSS/reset.css">
+	  	<link rel="stylesheet" href="CSS/styleAccueil.css">
 	  	
 	</head>
 	<body>
@@ -29,6 +29,7 @@
 									<li><a href="https://github.com/ThomasCampredon" target="_blank"><img class="icon" src="./icon/github2.png"></a></li>
 									<li><a href="mailto:thomas.campredon@etu.unilim.fr" target="_blank"><img class="icon" src="./icon/mail2.png"></a></li>
 									<li><a href="#" target="_blank"><img class="icon" src="./icon/linkedin2.png"></a></li>
+									<li><a href="./ressources/CV_CAMPREDON_Thomas.pdf" target="_blank"><img class="icon" src="./icon/CV.png"></a></li>
 								</ul>
 							</div>
 
@@ -60,5 +61,5 @@
 		</footer>
 	</body>
 	
-	<script src="script.js"></script>
+	<script src="javascript/script.js"></script>
 </html>
