--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 							<div id="lienReseau">
 								<ul class="enLigne">
-									<li><a href="https://github.com/ThomasCampredon" target="_blank"><img class="icon" src="./icon/github2.png"></a></li>
+									<li><a id ="gitlogo"href="https://github.com/ThomasCampredon" target="_blank"><img class="icon" src="./icon/github2.png"></a></li>
 									<li><a href="mailto:thomas.campredon@etu.unilim.fr" target="_blank"><img class="icon" src="./icon/mail2.png"></a></li>
 									<li><a href="#" target="_blank"><img class="icon" src="./icon/linkedin2.png"></a></li>
 									<li><a href="./ressources/CV_CAMPREDON_Thomas.pdf" target="_blank"><img class="icon" src="./icon/CV.png"></a></li>
@@ -39,12 +39,12 @@
 						</div>
 					</div>
 					<div class="boutonInfo">
-						<a href="#">
+						<a href="./pages/formations.html">
 							<span></span>
 							<span></span>
 							Formations
 						</a>
-						<a href="#">
+						<a href="./pages/competences.html">
 							<span></span>
 							<span></span>
 							Compétences
