--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 									<li><a id ="gitlogo"href="https://github.com/ThomasCampredon" target="_blank"><img class="icon" src="./icon/github2.png"></a></li>
 									<li><a href="mailto:thomas.campredon@etu.unilim.fr" target="_blank"><img class="icon" src="./icon/mail2.png"></a></li>
 									<li><a href="#" target="_blank"><img class="icon" src="./icon/linkedin2.png"></a></li>
-									<li><a href="./ressources/CV_CAMPREDON_Thomas.pdf2" target="_blank"><img class="icon" src="./icon/CV.png"></a></li>
+									<li><a href="./ressources/CV_CAMPREDON_Thomas.pdf" target="_blank"><img class="icon" src="./icon/CV.png"></a></li>
 								</ul>
 							</div>
 
