--- a/pages/competences.html
+++ b/pages/competences.html
@@ -4,8 +4,8 @@
 	<head>
 	 	<meta charset="utf-8">
 	  	<title>T.Campredon</title>
-	  	<link rel="stylesheet" href="CSS/reset.css">
-	  	<link rel="stylesheet" href="CSS/styleCompetences.css">
+	  	<link rel="stylesheet" href="../CSS/reset.css">
+	  	<link rel="stylesheet" href="../CSS/styleCompetences.css">
 	  	
 	</head>
 	<body>
