--- a/pages/formations.html
+++ b/pages/formations.html
@@ -4,15 +4,38 @@
 	<head>
 	 	<meta charset="utf-8">
 	  	<title>T.Campredon</title>
-	  	<link rel="stylesheet" href="CSS/reset.css">
-	  	<link rel="stylesheet" href="CSS/styleFormations.css">
+	  	<link rel="stylesheet" href="../CSS/reset.css">
+	  	<link rel="stylesheet" href="../CSS/styleFormations.css">
 	  	
 	</head>
 	<body>
 		<nav>
 
 		</nav>
-		
+		<div id="titre">
+			<h1>Formations</h1>
+		</div>
+		<div id="listeFormation">
+			<div class="formation">
+				<h2>Institut universitaire de technologie en informatique de Limoges</h2>
+				<div class="infoFormation">
+
+				</div>
+			</div>
+			<div class="formation">
+				<h2>Lycée Pierre Caraminot à Egletons</h2>
+				<div class="infoFormation">
+
+				</div>
+			</div>
+			<div class="formation">
+				<h2>College Albert Thomas à Egletons</h2>
+				<div class="infoFormation">
+
+				</div>
+			</div>
+
+		</div>
 
 
 		<footer>
