ajout bouton accueil sur la page formation

--- a/pages/formations.html
+++ b/pages/formations.html
@@ -12,31 +12,40 @@
 		<nav>
 
 		</nav>
-		<div id="titre">
-			<h1>Formations</h1>
+		<div class="parallax">
+			<div id="accueil">
+				<a href="../index.html">
+					<span></span>
+					<span></span>
+					Accueil
+				</a>
+			</div>
+			<div id="titre">
+				<h1>Formations</h1>
+			</div>
+			<div id="listeFormation">
+				<div class="formation">
+					<h2>Institut universitaire de technologie en informatique de Limoges</h2>
+					<div class="infoFormation">
+
+					</div>
+				</div>
+				<div class="formation">
+					<h2>Lycée Pierre Caraminot à Egletons</h2>
+					<div class="infoFormation">
+
+					</div>
+				</div>
+				<div class="formation">
+					<h2>College Albert Thomas à Egletons</h2>
+					<div class="infoFormation">
+
+					</div>
+				</div>
+
+			</div>
+
 		</div>
-		<div id="listeFormation">
-			<div class="formation">
-				<h2>Institut universitaire de technologie en informatique de Limoges</h2>
-				<div class="infoFormation">
-
-				</div>
-			</div>
-			<div class="formation">
-				<h2>Lycée Pierre Caraminot à Egletons</h2>
-				<div class="infoFormation">
-
-				</div>
-			</div>
-			<div class="formation">
-				<h2>College Albert Thomas à Egletons</h2>
-				<div class="infoFormation">
-
-				</div>
-			</div>
-
-		</div>
-
 
 		<footer>
 
