--- a/pages/formations.html
+++ b/pages/formations.html
@@ -25,27 +25,29 @@
 			</div>
 			<div id="listeFormation">
 				<div class="formation">
-					<h2>Institut universitaire de technologie en informatique de Limoges</h2>
 					<div class="infoFormation">
-
+						<h2>Institut universitaire de technologie en informatique de Limoges</h2>
+						<p>bonjour</p>
 					</div>
 				</div>
 				<div class="formation">
-					<h2>Lycée Pierre Caraminot à Egletons</h2>
 					<div class="infoFormation">
-
-					</div>
-				</div>
-				<div class="formation">
-					<h2>College Albert Thomas à Egletons</h2>
-					<div class="infoFormation">
-
+						<h2>Lycée Pierre Caraminot à Egletons</h2>
 					</div>
 				</div>
 
 			</div>
 
 		</div>
+
+		<svg>
+			<filter id="vague">
+				<feTurbulence x="0" y="0" baseFrequency="0.02" numOctaves="5" seed="2">
+					<animate attributeName="baseFrequency" dur="60s" values="0.02;0.05;0.02" repeatCount="indefinite"/>
+				</feTurbulence>
+				<feDisplacementMap in="SourceGraphic" scale="30"/>
+			</filter>
+		</svg>
 
 		<footer>
 
