--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							</div>
 
 							<p class="justifie">
-								Je suis un étudiant en 2ème année de diplome universitaire de technologie en informatique (DUT info) à Limoges. J'ai des connaissance en python, java, SQL, C, C++, HTML/CSS, javascript et PHP. Je souhaite devenir ingénieur en sécurité informatique.
+								Je suis un étudiant en informatique de 19 ans à Limoges. Je souhaite devenir ingénieur en sécurité informatique ou chercheur en intelligence artificielle.
 							</p>
 						</div>
 					</div>
