--- a/pages/formations.html
+++ b/pages/formations.html
@@ -27,12 +27,31 @@
 				<div class="formation">
 					<div class="infoFormation">
 						<h2>Institut universitaire de technologie en informatique de Limoges</h2>
-						<p>bonjour</p>
+						<div class="details">
+							<div class="bloc">
+								<p>Années</br>2018-2020</p>
+							</div>
+							<div class="bloc">
+								<p>Obtention du diplôme</p>
+							</div>
+						</div>
 					</div>
 				</div>
 				<div class="formation">
 					<div class="infoFormation">
 						<h2>Lycée Pierre Caraminot à Egletons</h2>
+						<div class="details">
+							<div class="bloc">
+								<p>Année</br>2017-2018</p>
+							</div>
+							<div class="bloc">
+								<p>Baccalauréat Scientifique-Science de l’ingénieur (SSI),
+									spécialité mathématiques, option section
+									européenne, mention bien
+								</p>
+							</div>
+						</div>
+					</div>
 					</div>
 				</div>
 
