--- a/pages/competences.html
+++ b/pages/competences.html
@@ -12,8 +12,23 @@
 		<nav>
 
 		</nav>
-		
+		<div class="parallax">
+			<div id="accueil">
+				<a href="../index.html">
+					<span></span>
+					<span></span>
+					Accueil
+				</a>
+			</div>
+			<div id="titre">
+				<h1>Compétences</h1>
+			</div>
+			<div id="container">
+				<div class="typeCompetence">
 
+				</div>
+			</div>
+		</div>
 
 		<footer>
 
