--- a/pages/competences.html
+++ b/pages/competences.html
@@ -25,7 +25,47 @@
 			</div>
 			<div id="container">
 				<div class="typeCompetence">
-
+					<h2>Outils maitrisés</h2>
+					<div class="comp">
+						<div class="logo">
+							<img src="../icon/langages/office.png" alt="iconComp">
+						</div>
+						<div class="logo">
+							<img src="../icon/langages/eclipse.png" alt="iconComp">
+						</div>
+						<div class="logo">
+							<img src="../icon/langages/mysql.png" alt="iconComp">
+						</div>
+					</div>
+				</div>
+				<div class="typeCompetence">
+					<h2>Languages</h2>
+					<div class="comp">
+						<div class="logo" id="java">
+							<img src="../icon/langages/java.png" alt="iconComp">
+						</div>
+						<div class="logo">
+							<img src="../icon/langages/c.png" alt="iconComp">
+						</div>
+						<div class="logo">
+							<img src="../icon/langages/cpp.png" alt="iconComp">
+						</div>
+						<div class="logo">
+							<img src="../icon/langages/html5.png" alt="iconComp">
+						</div>
+						<div class="logo">
+							<img src="../icon/langages/css3.png" alt="iconComp">
+						</div>
+						<div class="logo">
+							<img src="../icon/langages/js.png" alt="iconComp">
+						</div>
+						<div class="logo">
+							<img src="../icon/langages/php.png" alt="iconComp">
+						</div>
+					</div>
+				</div>
+				<div class="typeCompetence">
+					<h2>Compétences personnelles</h2>
 				</div>
 			</div>
 		</div>
