couleur on hover pour les compétences

--- a/pages/competences.html
+++ b/pages/competences.html
@@ -27,13 +27,16 @@
 				<div class="typeCompetence">
 					<h2>Outils maitrisés</h2>
 					<div class="comp">
-						<div class="logo">
+						<div class="logo non">
+							<img src="../icon/langages/androidstudio.png" alt="iconComp">
+						</div>
+						<div class="logo ok">
 							<img src="../icon/langages/office.png" alt="iconComp">
 						</div>
-						<div class="logo">
+						<div class="logo ok">
 							<img src="../icon/langages/eclipse.png" alt="iconComp">
 						</div>
-						<div class="logo">
+						<div class="logo ok">
 							<img src="../icon/langages/mysql.png" alt="iconComp">
 						</div>
 					</div>
@@ -41,32 +44,42 @@
 				<div class="typeCompetence">
 					<h2>Languages</h2>
 					<div class="comp">
-						<div class="logo" id="java">
+						<div class="logo ok" id="java">
 							<img src="../icon/langages/java.png" alt="iconComp">
 						</div>
-						<div class="logo">
+						<div class="logo inter">
 							<img src="../icon/langages/c.png" alt="iconComp">
 						</div>
-						<div class="logo">
+						<div class="logo inter">
 							<img src="../icon/langages/cpp.png" alt="iconComp">
 						</div>
-						<div class="logo">
+						<div class="logo ok">
 							<img src="../icon/langages/html5.png" alt="iconComp">
 						</div>
-						<div class="logo">
+						<div class="logo ok">
 							<img src="../icon/langages/css3.png" alt="iconComp">
 						</div>
-						<div class="logo">
+						<div class="logo inter">
 							<img src="../icon/langages/js.png" alt="iconComp">
 						</div>
-						<div class="logo">
+						<div class="logo ok">
 							<img src="../icon/langages/php.png" alt="iconComp">
 						</div>
+						<div class="logo non">
+							<img src="../icon/langages/nodejs.png" alt="iconComp">
+						</div>
+						<div class="logo inter">
+							<img src="../icon/langages/android.png" alt="iconComp">
+						</div>
+						
+
 					</div>
 				</div>
+				<!--
 				<div class="typeCompetence">
 					<h2>Compétences personnelles</h2>
 				</div>
+				-->
 			</div>
 		</div>
 
