--- a/pages/formations.html
+++ b/pages/formations.html
@@ -20,6 +20,7 @@
 					Accueil
 				</a>
 			</div>
+			<div class="clear"></div>
 			<div id="titre">
 				<h1>Formations</h1>
 			</div>
@@ -32,7 +33,7 @@
 								<p>Années</br>2018-2020</p>
 							</div>
 							<div class="bloc">
-								<p>Obtention du diplôme</p>
+								<p>Obtention du Diplôme Universitaire de Technologie en Informatique</p>
 							</div>
 						</div>
 					</div>
@@ -54,7 +55,6 @@
 					</div>
 					</div>
 				</div>
-
 			</div>
 
 		</div>
