mise à jour licence

--- a/pages/formations.html
+++ b/pages/formations.html
@@ -27,6 +27,19 @@
 			<div id="listeFormation">
 				<div class="formation">
 					<div class="infoFormation">
+						<h2>Faculté des sciences et techniques | Licence 3 en Informatique</h2>
+						<div class="details">
+							<div class="bloc">
+								<p>Années</br>2020-2021</p>
+							</div>
+							<div class="bloc">
+								<p>En cours</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="formation">
+					<div class="infoFormation">
 						<h2>Institut universitaire de technologie en informatique de Limoges</h2>
 						<div class="details">
 							<div class="bloc">
